# fit

./: .gitignore  CNAME  Untitled Diagram.drawio  index.html  Діаграма без назви.drawio
.github/workflows/: azure-static-web-apps-mango-pebble-0e0264010.yml
OOP/: OOP.sln
OOP/OOP/: Program.cs
OOP/lab1/: Program.cs  lab1.csproj
OOP/lab2/: Program.cs
OOP/lab3/: Company.cs  Department.cs  Department2.cs  Program.cs  StartupProject.cs
OOP/lab4/: Program.cs
OOP/lab4 Built-in/: Book.cs  Magazine.cs  PrintedEdition.cs  Program.cs  lab4 Built-in.csproj
OOP/lab4 abstract/: Book.cs  Magazine.cs  PrintedEdition.cs  Program.cs  lab4 abstract.csproj
OOP/lab5/: Book.cs  Booklet.cs  Magazine.cs  PrintedEdition.cs  Program.cs
OOP/lab6/: Program.cs
algorithms/: CMakeLists.txt  mkr.cpp
algorithms/lab1/: task1.cpp  task2.cpp  task3.cpp  task5.cpp
algorithms/lab2/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
algorithms/lab2.1/: task1.cpp
algorithms/lab2.2/: task1.cpp
algorithms/lab2.3/: task1.cpp
algorithms/lab2.4/: task1.cpp  task2.cpp
algorithms/lab2.5/: task.cpp  task1.cpp  task2.cpp
algorithms/lab2.6/: task1.cpp  task2.cpp
algorithms/lab2.7/: task.cpp
algorithms/lab2.8/: task.cpp
algorithms/lab3/: task1.cpp  task2.cpp  task3.cpp
algorithms/lab4/: task1.cpp
algorithms/lab5/: task1.cpp  task2.cpp  task3.cpp
algorithms/lab6/: task1.cpp  task2.cpp  task3.cpp
algorithms/lab7/: task1.cpp
algorithms/lab8/: task1.cpp
basic/lab_0/: task  (+1 more)
css/: index.css
docs/: index.html
lab_1/: lab1_2
lecs/: lec_2.cpp
olymp/: fly_and_spider  fly_and_spider.cpp
string/: CMakeLists.txt  main.cpp  stdafx.cpp  stdafx.h
untitled/: Діаграма без назви.drawio
(+72 files in other folders)
