cmake_minimum_required(VERSION 3.17)
project(algorithms)

set(CMAKE_CXX_STANDARD 20)

add_executable(task1.1 lab1/task1.cpp)
add_executable(task1.2 lab1/task2.cpp)
add_executable(task1.3 lab1/task3.cpp)
add_executable(task1.5 lab1/task5.cpp)

add_executable(task2.1 lab2/task1.cpp)
add_executable(task2.2 lab2/task2.cpp)
add_executable(task2.3 lab2/task3.cpp)
add_executable(task2.4 lab2/task4.cpp)

add_executable(task3.1 lab3/task1.cpp)
add_executable(task3.2 lab3/task2.cpp)
add_executable(task3.3 lab3/task3.cpp)

add_executable(task4.1 lab4/task1.cpp)

add_executable(task5.1 lab5/task1.cpp)
add_executable(task5.2 lab5/task3.cpp)

add_executable(task6.1 lab6/task1.cpp)
add_executable(task6.2 lab6/task2.cpp)
add_executable(task6.3 lab6/task3.cpp)

add_executable(task7.1 lab7/task1.cpp)

add_executable(task8.1 lab8/task1.cpp)

add_executable(mkr1 mkr.cpp)

add_executable(task2.1.1 lab2.1/task1.cpp)

add_executable(task2.2.1 lab2.2/task1.cpp)

add_executable(task2.3.1 lab2.3/task1.cpp)